objects/External_User_Request__c.object
<CustomObject>
    <description>This object will store all the information related to an External User Request.</description>
    <fields>
        <fullName>EXT_USE_RQT_Expiry_Date__c</fullName>
        <defaultValue>NOW() +$Setup.EXT_USR_Config__c.EXT_USR_RQT_Expiry_Duration__c</defaultValue>
        <description>Calculated value based on the Accepted request date + Expiry Duration.</description>
        <inlineHelpText>This is the date where the external user will be deactivated, this user will have to be reactivated to access the Pernod Ricard Chatter.</inlineHelpText>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Alias__c</fullName>
        <description>Required for creating a user in Salesforce.com</description>
        <label>Alias</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Community_Nickname__c</fullName>
        <description>Required for creating a user in Salesforce.com</description>
        <label>Community Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Company__c</fullName>
        <description>External User Company Name.</description>
        <label>Company Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Created_By_s_Manager__c</fullName>
        <inlineHelpText>Display the User&apos;s Manager&apos;s Name, when the request was created. Not automatically updated.</inlineHelpText>
        <label>Created By&apos;s Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Email__c</fullName>
        <description>External User Email</description>
        <inlineHelpText>Should not be one of the following domains : @pernod-ricard.com, @ricard.fr and @havana-club.com</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Expiry_Duration__c</fullName>
        <description>Number of days after which the user must be disabled.</description>
        <inlineHelpText>A number of days</inlineHelpText>
        <label>Expiry Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_External_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EXT_USR_RQT_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_First_Name__c</fullName>
        <description>External User First Name</description>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Group_ID__c</fullName>
        <label>Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Last_Name__c</fullName>
        <description>External User Last Name.</description>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Status__c</fullName>
        <inlineHelpText>This status is changed by the approval process only.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <color>#FF9900</color>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#33CC00</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Refused</fullName>
                    <color>#FF0000</color>
                    <label>Refused</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#000000</color>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                    <color>#66FFFF</color>
                    <label>Suspended</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXT_USR_RQT_Username__c</fullName>
        <description>Required for creating a user in Salesforce.com</description>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>External User Request</label>
    <listViews>
        <fullName>All_External_User_Grupo_Est_gio_Informa</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EXT_USR_RQT_Group_Name__c</columns>
        <columns>EXT_USR_RQT_Status__c</columns>
        <columns>EXT_USR_RQT_Company__c</columns>
        <columns>EXT_USR_RQT_First_Name__c</columns>
        <columns>EXT_USR_RQT_Last_Name__c</columns>
        <columns>EXT_USR_RQT_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXT_USR_RQT_Email__c</field>
            <operation>equals</operation>
            <value>fabiola.cordeiro@newik.com.br</value>
        </filters>
        <label>All External User Grupo Estágio Informaç</label>
        <language>en_US</language>
        <sharedTo>
            <role>ESN_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EXT_USR_RQT_All_External_User_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EXT_USR_RQT_Group_Name__c</columns>
        <columns>EXT_USR_RQT_Status__c</columns>
        <columns>EXT_USR_RQT_Company__c</columns>
        <columns>EXT_USR_RQT_First_Name__c</columns>
        <columns>EXT_USR_RQT_Last_Name__c</columns>
        <columns>EXT_USR_RQT_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All External User Requests</label>
        <language>en_US</language>
        <sharedTo>
            <role>ESN_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EXT_USR_RQT_My_External_User_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EXT_USR_RQT_Group_Name__c</columns>
        <columns>EXT_USR_RQT_Status__c</columns>
        <columns>EXT_USR_RQT_Company__c</columns>
        <columns>EXT_USR_RQT_First_Name__c</columns>
        <columns>EXT_USR_RQT_Last_Name__c</columns>
        <columns>EXT_USR_RQT_Email__c</columns>
        <filterScope>Mine</filterScope>
        <label>My External User Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GDT</fullName>
        <columns>NAME</columns>
        <columns>EXT_USR_RQT_Company__c</columns>
        <columns>EXT_USR_RQT_Group_Name__c</columns>
        <columns>EXT_USR_RQT_Username__c</columns>
        <columns>EXT_USR_RQT_Email__c</columns>
        <columns>EXT_USE_RQT_Expiry_Date__c</columns>
        <columns>EXT_USR_RQT_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EXT_USR_RQT_Created_By_s_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EXT_USR_RQT_Company__c</field>
            <operation>contains</operation>
            <value>FMI</value>
        </filters>
        <label>GDT</label>
        <language>en_US</language>
        <sharedTo>
            <group>GDT_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EUR-{0000}</displayFormat>
        <label>External User Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External User Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>EXT_USR_RQT_VR_Email_Verification</fullName>
        <active>true</active>
        <description>These email domains are forbidden : @pernod-ricard.com, @ricard.fr and @havana-club.com.
Public email domains are forbidden too (e.g. @gmail.com).</description>
        <errorConditionFormula>OR( CONTAINS(EXT_USR_RQT_Email__c, &quot;@pernod-ricard.com&quot;) ,CONTAINS(EXT_USR_RQT_Email__c, &quot;@ricard.fr&quot;)
,CONTAINS(EXT_USR_RQT_Email__c, &quot;@havana-club.com&quot;)
)</errorConditionFormula>
        <errorDisplayField>EXT_USR_RQT_Email__c</errorDisplayField>
        <errorMessage>These email domains are forbidden : @pernod-ricard.com, @ricard.fr and @havana-club.com.
Public email domains are forbidden too (e.g. @gmail.com).
Please contact your administrator for further information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EXT_USR_RQT_VR_Manager_Verification</fullName>
        <active>true</active>
        <description>Check if the current External User Request Creator has a Manager fulfilled on his/her profile.</description>
        <errorConditionFormula>ISNULL( $User.ManagerId)</errorConditionFormula>
        <errorMessage>You don&apos;t have any Manager fulfilled on your Chatter Profile. Please contact your IT local team.</errorMessage>
    </validationRules>
</CustomObject>